# trusted-function-framework

./: .gitignore  CMakeLists.txt  Initrd.sh  build.sh  clean.sh  pb.patch  run.sh
cmake/: FindGRPC.cmake  FindProtobuf.cmake  FindSGX.cmake
enclave_samples/protobuf_functions/: CMakeLists.txt
enclave_samples/protobuf_functions/app/: app.cpp
enclave_samples/remote_attestation/: CMakeLists.txt
enclave_samples/remote_attestation/app/: app.cpp
enclave_samples/remote_attestation/enclave/: enclave.edl
enclave_service/: CMakeLists.txt
enclave_service/client/: untrusted_enclave_service_client_main.cpp
enclave_service/server/: untrusted_enclave_service_server_main.cpp
enclave_service/trusted/: enclave_service.edl
sdk/trusted/: CMakeLists.txt  trusted_pbcall.cpp
sdk/trusted/ra/: trusted_ra.cpp
sdk/trusted/utils/: trusted_crypto.cpp  trusted_log.cpp
sdk/untrusted/: CMakeLists.txt
sdk/untrusted/challenger/: CMakeLists.txt
sharedir/: agent.sh
